--- a/css/style.css
+++ b/css/style.css
@@ -291,9 +291,11 @@ h1.content-side-heading {
   .toggleMenuBtn {
     display: block;
     z-index: 10;
+    cursor: pointer;
     font-size: 20px;
   }
   span#darkModeIcon {
+    display: none;
     position: absolute;
     top: 1%;
     right: 8%;
